# adler32-simd-rs

./: Cargo.toml  LICENSE  aliases.js  index.html  search-index.js
adler32/: fn.adler32.html  index.html  struct.RollingAdler32.html
benches/: bench.rs
implementors/core/default/: trait.Default.js
implementors/core/marker/: trait.Send.js  trait.Sync.js
src/: lib.rs
src/accel/: mod.rs  x86.rs
src/adler32/: lib.rs.html
