[package]
name = "adler32"
version = "1.0.4"
authors = ["Remi Rampin <remirampin@gmail.com>"]
description = "Minimal Adler32 implementation for Rust."
documentation = "https://remram44.github.io/adler32-rs/index.html"
repository = "https://github.com/remram44/adler32-rs"
readme = "README.md"
keywords = ["adler32", "hash", "rolling"]
license = "Zlib"

[dev-dependencies]
bencher = "0.1.5"
rand = "0.7.2"

[[bench]]
name = "bench"
harness = false

[dependencies]
cfg-if = "0.1.10"
